@@ -1,5 +1,5 @@
 %-----------------------------------------
-%	$Id: GMT_Appendix_A.tex,v 1.38 2009-05-19 20:20:53 guru Exp $
+%	$Id: GMT_Appendix_A.tex,v 1.39 2009-05-20 03:51:46 guru Exp $
 %
 %	The GMT Documentation Project
 %	Copyright 2000-2009.
@@ -104,6 +104,7 @@ Earth's KML format, \GMTprog{gmtdigitize} which provides a GMT interface
 to a digitizing tablet via a serial port, \GMTprog{gmtstitch} which can
 be used to assemble pieces digitized lines into complete lines or
 polygons, \GMTprog{gmtdp} which performs line reduction using the Douglas-Peucker algorithm,
+\GMTprog{kml2gmt} which extracts \GMT\ table data from Google Earth KML files,
 and \GMTprog{nc2xy} which can extract data from column-oriented netCDF files.
 The package is maintained by Paul Wessel.
 The increasingly popular utility \GMTprog{ps2raster}, which simplifies the rasterization of \GMT
