@@ -124,12 +124,16 @@ share/mgg/carter.d
 share/mgg/gmtfile_paths
 src/misc/README.misc
 src/misc/makefile
+src/misc/gmt2kml.c
+src/misc/gmt2kml.1
 src/misc/gmtdigitize.c
 src/misc/gmtdigitize.1
 src/misc/gmtdp.c
 src/misc/gmtdp.1
 src/misc/gmtstitch.c
 src/misc/gmtstitch.1
+src/misc/kml2gmt.c
+src/misc/kml2gmt.1
 src/misc/makepattern.c
 src/misc/makepattern.1
 src/misc/nc2xy.c
@@ -305,9 +309,11 @@ share/doc/gmt/html/man/gmtlist.html
 share/doc/gmt/html/man/gmtpath.html
 share/doc/gmt/html/man/gmttrack.html
 share/doc/gmt/html/man/mgd77togmt.html
+share/doc/gmt/html/man/gmt2kml.html
 share/doc/gmt/html/man/gmtdigitize.html
 share/doc/gmt/html/man/gmtdp.html
 share/doc/gmt/html/man/gmtstitch.html
+share/doc/gmt/html/man/kml2gmt.html
 share/doc/gmt/html/man/makepattern.html
 share/doc/gmt/html/man/nc2xy.html
 share/doc/gmt/html/man/psmegaplot.html
